--- a/css/style.css
+++ b/css/style.css
@@ -1,265 +1,285 @@
 
-@import url('https://fonts.googleapis.com/css2?family=Scope+One&family=Ubuntu:ital,wght@0,400;0,500;1,400&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Scope+One&family=Ubuntu:ital,wght@0,400;0,500;1,400&display=swap");
 
-*{
-    margin:0;
-    padding:0;
+* {
+  margin: 0;
+  padding: 0;
 }
-html{
-    scroll-behavior: smooth;
+html {
+  scroll-behavior: smooth;
 }
-.logo{
-    width:40%;
-    height: 60%;
-    display:flex;
-    justify-content: center;
-    align-items: center;
-   
+.logo {
+  width: 40%;
+  height: 60%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
-.logo img
-{
-    width:33%;
-    height: 20%;
-    border-radius: 100px;
-    
-    
-
+.logo img {
+  width: 33%;
+  height: 20%;
+  border-radius: 100px;
 }
-.navbar{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    position: sticky;
-    top:0;
-    cursor: pointer;
-
+.navbar {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: sticky;
+  top: 0;
+  cursor: pointer;
 }
-.nav-list{
-    width:70%;
-    display: flex;
-    align-items: center;
+.nav-list {
+  width: 70%;
+  display: flex;
+  align-items: center;
 }
 .nav-list li {
-    list-style-type: none;
-    padding: 26px 30px;
-    
-
+  list-style-type: none;
+  padding: 26px 30px;
 }
-.navbar li a{
-    color:aqua;
-    font-size:22px;
+.navbar li a {
+  color: aqua;
+  font-size: 22px;
 }
 .nav-list li a:hover {
-    text-decoration: none;
-    color: red;
-
+  text-decoration: none;
+  color: red;
 }
-.rightNav{
-    width:30%;
-    text-align: right;
-    padding: 0 23px;
+.rightNav {
+  width: 30%;
+  text-align: right;
+  padding: 0 23px;
 }
-#search{
-    padding: 5px;
-    font-size: 17px;
-    border:2px solid grey;
-    border-radius: 9px;
+#search {
+  padding: 5px;
+  font-size: 17px;
+  border: 2px solid grey;
+  border-radius: 9px;
 }
-.background{
-    background: rgba(18, 18, 18, 0.7)url('../img/bp.jpg');
-    background-size: cover;
-    background-blend-mode:darken ;
+.background {
+  background: rgba(18, 18, 18, 0.7) url("../img/bp.jpg");
+  background-size: cover;
+  background-blend-mode: darken;
 }
-.firstSection{
-    height: 100vh;
+.firstSection {
+  height: 100vh;
 }
-.box-main{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: white;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    max-width: 50%;
-    margin: auto;
-    height: 80%;
+.box-main {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  max-width: 50%;
+  margin: auto;
+  height: 80%;
 }
-.firstHalf{
-    width: 75%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-
+.firstHalf {
+  width: 75%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
-.secondHalf{
-    width: 30%;
-
+.secondHalf {
+  width: 30%;
 }
 .secondHalf img {
+  width: 100%;
+  height: 300px;
+}
+.text-big {
+  font-size: 41px;
+  font-family: "Ubuntu" sans-serif;
+}
+.text-small {
+  font-size: 18px;
+}
+.btn-sm {
+  padding: 6px 10p;
+  vertical-align: middle;
+}
+.btn {
+  padding: 8px 20px;
+  margin: 7px 3px;
+  border: 2px solid white;
+  border-radius: 8px;
+  cursor: pointer;
+  background-color: palevioletred;
+}
+.section {
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  max-width: auto;
+  font-family: "Ubuntu", sans-serif;
+}
+.secRight {
+  height: 500px;
+  display: flex;
+  justify-content: evenly;
+  align-items: center;
+  max-width: 80%;
+  margin: auto;
+}
+.left {
+  flex-direction: row-reverse;
+  font-family: "Ubuntu" sans-serif;
+}
+.paras {
+  padding: 0px 65px;
+}
+
+.sectionSub {
+  font-family: "Segoe UI", "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+}
+.thumbnail img {
+  width: 250px;
+  border: 2px solid black;
+  border: radius 26px;
+  margin-top: 19px;
+}
+.contact {
+  background-color: lightgray;
+  height: 55vh;
+  padding: 6px;
+  margin: 12px;
+  color: blue;
+  font-size: larger;
+}
+.text-center {
+  padding-top: 20px;
+  text-align: center;
+  margin: auto;
+  padding: 30px;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+}
+.form {
+  max-width: 500px;
+  margin: 26pxa auto;
+}
+.form input {
+  margin: 30px 0;
+  width: 100%;
+  font-size: 19px;
+  border: 6px solid gray;
+  border-radius: 6px;
+  margin: 6px auto;
+  padding: 5px 3px;
+}
+#button {
+  font-size: medium;
+}
+.text-footer {
+  text-align: center;
+  margin: auto;
+  padding: 30px;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  justify-content: center;
+  align-content: center;
+  color: white;
+  font-size: larger;
+}
+.burger {
+  cursor: pointer;
+}
+.line {
+  width: 33px;
+  background-color: white;
+  height: 4px;
+  margin: 3px 3px;
+}
+@media only screen and(max-width:1140px) {
+  .nav-list {
+    flex-direction: column;
+  }
+  .navbar {
+    flex-direction: column;
+    transform: all 0.3s ease-out;
+    height: 447px;
+  }
+  .rightNav {
+    text-align: center;
+  }
+  #search {
+    width: 100px;
+  }
+  .burger {
+    display: block;
+  }
+  .h-nav-resp {
+    height: 72px;
+  }
+  .v-class-resp {
+    opacity: 0;
+  }
+  .box-main {
+    flex-direction: column-reverse;
+    max-width: 100%;
+  }
+  .text-small {
+    text-align: center;
+  }
+  .text-big {
+    text-align: center;
+  }
+  .btn {
+    text-align: center;
+  }
+  .section {
+    flex-direction: column-reverse;
+  }
+}
+
+@media only screen and (max-width: 1140px) {
+  .nav-list {
+    flex-direction: column;
+  }
+  .navbar {
+    flex-direction: column;
+    height: auto;
+  }
+  .rightNav {
+    text-align: center;
+    padding: 10px;
+  }
+  #search {
     width: 100%;
-    height:300px;
- 
-
-
-}
-.text-big{
-    font-size: 41px;
-    font-family: 'Ubuntu'sans-serif;
-
-}
-.text-small{
-    font-size: 18px;
-
-}
-.btn-sm{
-    padding:6px 10p;
-    vertical-align: middle;
-}
-.btn{
-    padding:8px 20px;
-    margin:7px 3px;
-    border:2px solid white;
-    border-radius: 8px;
-    cursor: pointer;
-    background-color:palevioletred;
-
-    }
-    .section{
-        display: flex;
-        align-items: center;
-        justify-content: space-evenly;
-        max-width: auto;
-        font-family: 'Ubuntu' ,sans-serif;
-    }
-.secRight{
-    height: 500px;
-    display: flex;
-    justify-content: evenly;
+    margin: 10px 0;
+  }
+  .burger {
+    display: block;
+  }
+  .h-nav-resp {
+    height: auto;
+  }
+  .v-class-resp {
+    display: none;
+  }
+  .box-main {
+    flex-direction: column;
+    max-width: 100%;
+    text-align: center;
+  }
+  .text-small {
+    text-align: center;
+  }
+  .text-big {
+    text-align: center;
+  }
+  .btn {
+    text-align: center;
+    margin: 10px 0;
+  }
+  .secRight,
+  .section-left,
+  .section {
+    flex-direction: column;
     align-items: center;
-    max-width: 80%;
-    margin:auto
-    
-    
-
-
-}
-.left{
-    flex-direction: row-reverse;
-    font-family: 'Ubuntu'sans-serif;
-
-
-}
-.paras{
-    padding: 0px 65px;
-}
-
-.sectionSub{
-    font-family: 'Segoe UI' , 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-}
-.thumbnail img{
-    width:250px;
-    border: 2px solid black;
-    border: radius 26px;
-    margin-top: 19px;
-}
-.contact{
-    background-color:lightgray;
-    height: 55vh;
-    padding: 6px;
-    margin: 12px;
-    color:blue;
-    font-size: larger;
-}
-.text-center{
-    padding-top: 20px;
-    text-align: center;
-    margin: auto;
-    padding: 30px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-}
-.form{
-    max-width:500px;
-    margin: 26pxa auto;
-
-    
-}
-.form input{
-    margin: 30px 0;
+    max-width: 100%;
+  }
+  .thumbnail img {
     width: 100%;
-    font-size: 19px;
-    border: 6px solid gray;
-    border-radius: 6px;
-    margin: 6px auto;
-    padding: 5px 3px;
+    max-width: 300px;
+    margin-top: 10px;
+  }
 }
-#button
-{
-    font-size: medium;
-}
-.text-footer{
-    text-align: center;
-    margin: auto;
-    padding: 30px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    justify-content: center;
-    align-content: center;
-    color: white;
-    font-size: larger;
-}
-.burger
-{ 
-    
-    cursor: pointer;
-    
-    
-    
-
-}
-.line{
-    width: 33px;
-    background-color: white;
-    height: 4px;
-    margin: 3px 3px;
-}
-@media only screen and(max-width:1140px)
-{
-    .nav-list {
-        flex-direction:column;
-    }
-    .navbar{
-        flex-direction: column;
-        transform:all 0.3s ease-out;
-        height: 447px;
-    }
-    .rightNav{
-        text-align: center;
-    }
-    #search{
-        width: 100px;
-    }
-    .burger{
-        display: block;
-    }
-    .h-nav-resp{
-        height: 72px;
-    }
-    .v-class-resp{
-        opacity: 0;
-    }
-     .box-main{
-        flex-direction: column-reverse;
-        max-width: 100%;
-     }
-     .text-small{
-        text-align: center;
-
-     }
-     .text-big{
-        text-align: center;
-     }
-     .btn{
-        text-align: center;
-     }
-     .section{
-        flex-direction: column-reverse;
-     }
-     }
